# random_catalan_word

./: .gitignore  manage.py  pyproject.toml
.github/workflows/: ci.yml
random_catalan_word/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_check.py  test_dummy.py
